<resources>
    <string name="app_name">Flight Booking</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="user_registration">User Registration</string>
    <string name="mobile_number">Mobile number</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="flight_search">Flight Search</string>
    <string name="From">From</string>
    <string name="to">To</string>
    <string name="Departure_Date">Departure Date</string>
    <string name="search_flights">Search Flights</string>
    <string name="enter_date">Enter Date</string>
    <string name="select_date">Select Date</string>
    <string name="text">Text</string>
</resources>