<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_plane" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Abhishek"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/colorBlue"
        android:layout_gravity="center"
        android:layout_weight="10"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/colorDarkBlack"
        android:id="@+id/edit_text_email_id"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/colorDarkBlack"
        android:id="@+id/edit_text_password"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signin"
        android:id="@+id/button_sing_in"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/dp_20"
           android:layout_marginLeft="@dimen/dp_20"
           android:layout_marginRight="@dimen/dp_20"
           >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:id="@+id/text_View_singup_msg"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/colorDarkBlack"
            />


           <androidx.appcompat.widget.AppCompatButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/signup"
               android:layout_marginStart="@dimen/dp_10"
               android:id="@+id/button_sing_up"
               android:background="@android:color/transparent"
               android:textColor="@color/colorBlue"
               />

       </LinearLayout>
</LinearLayout>